proof-read docu, better name: s/unknown_files/cleanup/

--- a/examples/transfer-delete-on-target.yaml
+++ b/examples/transfer-delete-on-target.yaml
@@ -12,5 +12,5 @@ jobs:
     to:
       container: mirror
       object_prefix: ubuntu-repos
-    unknown_files:
+    cleanup:
       strategy: delete
