--- a/examples/source-debian.yaml
+++ b/examples/source-debian.yaml
@@ -12,6 +12,7 @@ jobs:
       type: debian
       dist: [xenial, xenial-security, disco, cosmic]
       arch: [amd64, i386]
+      verify_signature: true
       # SSL certs are optionally supported here, too
       cert: /path/to/client.pem
       key:  /path/to/client-key.pem
