--- a/examples/source-yum.yaml
+++ b/examples/source-yum.yaml
@@ -11,6 +11,7 @@ jobs:
       url:  https://dl.fedoraproject.org/pub/epel/7Server/x86_64/
       type: yum
       arch: [x86_64, noarch]
+      verify_signature: true
       # SSL certs are optionally supported here, too
       cert: /path/to/client.pem
       key:  /path/to/client-key.pem
