--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -11,6 +11,15 @@ variables:
 vendoring:
   enabled: true
 
+githubWorkflows:
+  global:
+    ignorePaths: ["**.md"] # all Markdown files
+  license:
+    enabled: true
+  spellCheck:
+    enabled: true
+    ignorePaths: [] # override global setting so that nothing is ignored
+
 verbatim: |
   functional-test:
     bash tests.sh http
