--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -18,6 +18,7 @@ githubWorkflows:
     enabled: true
   spellCheck:
     enabled: true
+    ignoreWords: ["transfered"] # excluding because some metrics have it in their name
     ignorePaths: [] # override global setting so that nothing is ignored
 
 verbatim: |
