--- a/examples/source-debian.yaml
+++ b/examples/source-debian.yaml
@@ -6,6 +6,12 @@ swift:
   project_domain_name: Default
   password: 20g82rzg235oughq
 
+gpg:
+  cache_container_name: "gpg_public_keys"
+  keyserver_urls:
+    - "https://keyserver.ubuntu.com/pks/lookup?search=0x{keyid}&options=mr&op=get"
+    - "https://pgp.mit.edu/pks/lookup?search=0x{keyid}&options=mr&op=get"
+
 jobs:
   - from:
       url:  http://de.archive.ubuntu.com/ubuntu/
