--- a/.github/workflows/license.yaml
+++ b/.github/workflows/license.yaml
@@ -5,29 +5,30 @@
 
 name: License
 "on":
-  pull_request:
-    branches:
-    - '*'
-    paths-ignore:
-    - '**.md'
   push:
     branches:
-    - master
+      - master
     paths-ignore:
-    - '**.md'
+      - '**.md'
+  pull_request:
+    branches:
+      - '*'
+    paths-ignore:
+      - '**.md'
+permissions:
+  contents: read
 jobs:
   addlicense:
     name: Check
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: "1.17"
-    - name: Check if source code files have license header
-      run: |
-        go install github.com/google/addlicense@latest
-        find * \( -name vendor -type d -prune \) -o \( -name \*.go -exec addlicense --check -- {} + \)
-
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.17"
+      - name: Check if source code files have license header
+        run: |
+          go install github.com/google/addlicense@latest
+          find * \( -name vendor -type d -prune \) -o \( -name \*.go -exec addlicense --check -- {} + \)
