Run go-makefile-maker, prepare Dockerfile for renovate

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -19,14 +19,19 @@ spellCheck:
 
 githubWorkflow:
   global:
+    assignees:
+      - SuperSandro2000
     ignorePaths: ["**.md"] # all Markdown files
-  codeQL:
-    enabled: true
   license:
+    enabled: true
+  securityChecks:
     enabled: true
   spellCheck:
     enabled: true
     ignorePaths: [] # override global setting so that nothing is ignored
+
+renovate:
+  enabled: true
 
 verbatim: |
   functional-test:
