--- a/examples/source-github-releases.yaml
+++ b/examples/source-github-releases.yaml
@@ -8,7 +8,7 @@ swift:
 
 jobs:
   - from:
-      url: https://github.com/sapcc/limesctl/
+      url: https://github.com/sapcc/limesctl
       type: github-releases
       token: ghp_asjdkajsdlbyaksjd2
       tag_name_pattern: "^v[0-9]+.[0-9]+.[0-9]+$"
