--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,7 +9,7 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -X github.com/sapcc/swift-http-import/pkg/util.Version=={{.Version}}
+      - -X github.com/sapcc/swift-http-import/pkg/util.Version={{.Version}}
     mod_timestamp: "{{ .CommitTimestamp }}" # Ensure builds are reproducible
 
 snapshot:
