--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,20 @@
-# build artifacts
+.dockerignore
+# TODO: uncomment when applications no longer use git to get version information
+#.git/
+.github/
+.gitignore
+.goreleaser.yml
+/*.env*
+.golangci.yaml
 build/
-
-# config examples
+CONTRIBUTING.md
+Dockerfile
+docs/
+LICENSE*
+Makefile.maker.yaml
+README.md
+report.html
+shell.nix
+/testing/
 examples/
-
-# testing
-*.yaml
+make-config.sh
