add tzdata to Dockerfile
This is not needed by s-h-i itself, but by the extra shell script
tooling in our deployments.

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -19,6 +19,8 @@ dockerfile:
   extraIgnores:
     - examples/
     - make-config.sh
+  extraPackages:
+    - tzdata
 
 golangciLint:
   createConfig: true
