upgrade to Go 1.18

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -33,6 +33,7 @@ spellCheck:
 githubWorkflow:
   global:
     assignees:
+      - majewsky
       - SuperSandro2000
     ignorePaths: ["**.md"] # all Markdown files
   license:
