--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,7 +9,7 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -X github.com/sapcc/swift-http-import/pkg/util.Version={{.Version}}
+      - -s -w -X github.com/sapcc/go-api-declarations/bininfo.binName=swift-http-import -X github.com/sapcc/go-api-declarations/bininfo.version={{ .Version }} -X github.com/sapcc/go-api-declarations/bininfo.commit={{ .FullCommit  }} -X github.com/sapcc/go-api-declarations/bininfo.buildDate={{ .CommitDate }}
     mod_timestamp: "{{ .CommitTimestamp }}" # Ensure builds are reproducible
 
 snapshot:
