Update go-makefile-maker config

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -18,6 +18,10 @@ dockerfile:
     - tini
     - tzdata
 
+golang:
+  enableVendoring: true
+  setGoModVersion: true
+
 golangciLint:
   createConfig: true
 
@@ -40,9 +44,6 @@ renovate:
   assignees:
     - majewsky
     - SuperSandro2000
-
-vendoring:
-  enabled: true
 
 verbatim: |
   functional-test:
