--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -80,6 +80,9 @@ linters-settings:
     check-shadowing: true
   nolintlint:
     require-specific: true
+  misspell:
+    ignore-words:
+      - transfered
   stylecheck:
     dot-import-whitelist:
       - github.com/onsi/ginkgo/v2
