--- a/REUSE.toml
+++ b/REUSE.toml
@@ -21,6 +21,13 @@ SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = [
+  "examples/*.yaml",
+]
+SPDX-FileCopyrightText = "SAP SE"
+SPDX-License-Identifier = "Apache-2.0"
+
+[[annotations]]
+path = [
   "vendor/github.com/cactus/go-statsd-client/v5/**",
 ]
 precedence = "aggregate"
