fix copyright text

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -23,7 +23,7 @@ SPDX-License-Identifier = "Apache-2.0"
 path = [
   "examples/*.yaml",
 ]
-SPDX-FileCopyrightText = "SAP SE"
+SPDX-FileCopyrightText = "SAP SE or an SAP affiliate company"
 SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
