enable golang.autoupdateableDeps

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -20,6 +20,7 @@ dockerfile:
   withLinkerdAwait: true
 
 golang:
+  autoupdateableDeps: ^github.com/(?:sapcc|sap-cloud-infrastructure)/
   enableVendoring: true
   setGoModVersion: true
 
