add support for zstd compression

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -60,6 +60,14 @@ SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = [
+  "vendor/github.com/klauspost/compress/**",
+]
+precedence = "aggregate"
+SPDX-FileCopyrightText = "Other"
+SPDX-License-Identifier = "Apache-2.0"
+
+[[annotations]]
+path = [
   "vendor/github.com/majewsky/schwift/v2/**",
 ]
 precedence = "aggregate"
