--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -145,6 +145,9 @@ linters:
       enable-all: true
     nolintlint:
       require-specific: true
+    misspell:
+      ignore-rules:
+        - transfered
     perfsprint:
       # modernize generates nicer fix code
       concat-loop: false
