--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -46,10 +46,6 @@ githubWorkflow:
     enabled: true
   securityChecks:
     enabled: true
-  
-spellCheck:
-  ignoreWords: ["transfered"]
-
 
 renovate:
   enabled: true
@@ -65,6 +61,10 @@ reuse:
       - examples/*.yaml
       SPDX-FileCopyrightText: SAP SE or an SAP affiliate company
       SPDX-License-Identifier: Apache-2.0
+
+typos:
+  extendWords:
+    transfered: transfered # this unfortunate misspelling is exposed in a metric name and cannot be fixed without breaking backwards compatibility
 
 # When running `make check` manually, we find it desirable to have this include the functional test suite since it has the most test coverage.
 # People have muscle memory for `make check`, so this should include the functional test suite, too.
