replace manual regexp compiling with go-bits/regexpext

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -68,6 +68,14 @@ SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = [
+  "vendor/github.com/majewsky/gg/**",
+]
+precedence = "aggregate"
+SPDX-FileCopyrightText = "Other"
+SPDX-License-Identifier = "Apache-2.0"
+
+[[annotations]]
+path = [
   "vendor/github.com/majewsky/schwift/v2/**",
 ]
 precedence = "aggregate"
@@ -145,6 +153,14 @@ path = [
 precedence = "aggregate"
 SPDX-FileCopyrightText = "Other"
 SPDX-License-Identifier = "ISC"
+
+[[annotations]]
+path = [
+  "vendor/github.com/hashicorp/golang-lru/v2/**",
+]
+precedence = "aggregate"
+SPDX-FileCopyrightText = "Other"
+SPDX-License-Identifier = "MPL-2.0"
 
 [[annotations]]
 path = [
