fix `make functional-test` on a fresh clone
Running the test suite requires building the binary first. During `make
check`, this happens implicitly because the `check` target depends on
`build-all`, but when running only `make functional-test`, we cannot
rely on that.

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -71,7 +71,7 @@ typos:
 #
 # But some CI systems may not have access to OpenStack credentials, so CHECK_SKIPS_FUNCTIONAL_TEST=true will allow those to skip the tests that they cannot run.
 verbatim: |
-  functional-test:
+  functional-test: build-all
     ./test/run.sh all
 
   CHECK_SKIPS_FUNCTIONAL_TEST ?= false
